# 100GUIAPPS

./: README.md
Calculator/GTK-Rust/: Cargo.toml
Calculator/Gtk-Rust/: Cargo.toml
Calculator/JFX-Scala/: build.sbt
Calculator/JFX-Scala/src/main/scala/com/github/wenjunhuang/uiapps/calculator/: Binding.scala  Calculator.scala
Calculator/Qt5-CPP/: .clang-format  Button.cc  Button.h  CMakeLists.txt  Calculator.cc  Calculator.h  main.cpp
Calculator/Qt5-CPP/cmake/: FindGoogleTest.cmake  FindRxCpp.cmake
Calculator/Qt5-CPP/number/: CMakeLists.txt  GmpType.h  Number.cc  Number.h  NumberBase.h  NumberError.cc  NumberError.h  NumberFloat.cc  NumberFloat.h  NumberFraction.cc  NumberFraction.h  NumberInteger.cc  NumberInteger.h  NumberOperators.cc  NumberOperators.h  NumberUnitTests.cc  NumberUnitTests.h
MusicPlayer/QtQuick-CPP/MusicPlayer/: CMakeLists.txt
todomvc/kotlin-compose/: build.gradle.kts
todomvc/kotlin-compose/src/main/kotlin/: Styles.kt  Todo.kt  main.kt  models.kt  modifiers.kt
todomvc/scala-javafx/: .scalafmt.conf  build.sbt
