[package]
name = "Gtk-Rust"
version = "0.1.0"
authors = ["BlackSuite <wenjun.huang80@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
url = "1.4"
futures-preview = { version = "0.2", optional = true }
atk = "^0"
glib-sys = "^0"
gobject-sys = "^0"
glib = "^0"
gio = "^0"
gdk = "^0"
gdk-pixbuf = "^0"
gtk = "^0"
pango = "^0"
cairo-rs = { version = "^0", features = ["png"] }

[features]
subclassing = ["glib/subclassing"]
